<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.schedule.ScheduleActivity">

    <Button
        android:id="@+id/buttonMon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/schedule_mon"
        app:layout_constraintEnd_toStartOf="@+id/buttonTue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonTue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/schedule_tue"
        app:layout_constraintEnd_toStartOf="@+id/buttonWed"
        app:layout_constraintStart_toEndOf="@+id/buttonMon"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonWed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/schedule_wed"
        app:layout_constraintEnd_toStartOf="@+id/buttonThu"
        app:layout_constraintStart_toEndOf="@+id/buttonTue"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonThu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/schedule_thu"
        app:layout_constraintEnd_toStartOf="@+id/buttonFri"
        app:layout_constraintStart_toEndOf="@+id/buttonWed"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonFri"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/schedule_fri"
        app:layout_constraintEnd_toStartOf="@+id/buttonSat"
        app:layout_constraintStart_toEndOf="@+id/buttonThu"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonSat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/schedule_sat"
        app:layout_constraintEnd_toStartOf="@+id/buttonSun"
        app:layout_constraintStart_toEndOf="@+id/buttonFri"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonSun"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/schedule_sun"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonSat"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/actualDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/actualDay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonMon"
        tools:ignore="MissingConstraints" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lstSessions"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/actualDay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:listitem="@layout/schedule_activity_item" />

    <TextView
        android:id="@+id/lblEmptyView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/schedule_lblEmptyView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>