<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/schedule_item_padding"
    tools:context=".ui.schedule.ScheduleActivity">

    <ImageView
        android:id="@+id/imgTraining"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/bodyattack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/sessionName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/bodyAttack"
        app:layout_constraintStart_toEndOf="@+id/imgTraining"
        app:layout_constraintTop_toTopOf="@+id/imgTraining"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/sessionTrainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/trainer"
        app:layout_constraintStart_toEndOf="@+id/imgTraining"
        app:layout_constraintTop_toBottomOf="@+id/sessionName"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/sessionRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/room"
        app:layout_constraintStart_toEndOf="@+id/imgTraining"
        app:layout_constraintTop_toBottomOf="@+id/sessionTrainer"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/sessionHour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hour"
        app:layout_constraintBottom_toTopOf="@+id/imgTraining"
        app:layout_constraintEnd_toEndOf="@+id/imgTraining"
        app:layout_constraintStart_toStartOf="@+id/imgTraining"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnJoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/joinSession"
        app:layout_constraintEnd_toEndOf="@+id/participants"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="@+id/participants"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/participants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/participants"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnJoin"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>